--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/multer": "^1.4.7",
     "@types/pg": "^8.10.2",
     "@types/sequelize": "^4.28.15",
+    "dotenv": "^16.3.1",
     "ts-node-dev": "^2.0.0"
   }
 }
