--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "sequelize": "^6.33.0",
@@ -20,7 +24,9 @@
     "tslib": "^2.6.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/multer": "^1.4.7",
     "@types/pg": "^8.10.2",
     "@types/sequelize": "^4.28.15",
