--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
@@ -27,12 +28,14 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.4",
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/multer": "^1.4.7",
     "@types/pg": "^8.10.2",
     "@types/sequelize": "^4.28.15",
     "dotenv": "^16.3.1",
+    "nodemon": "^3.0.1",
     "ts-node-dev": "^2.0.0"
   }
 }
