--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.11.3",
     "sequelize": "^6.33.0",
     "sequelize-typescript": "^2.1.5",
+    "slugify": "^1.6.6",
     "tslib": "^2.6.2"
   },
   "devDependencies": {
