--- a/src/config/config.env
+++ b/src/config/config.env
@@ -11,7 +11,7 @@ SECRET_KEY=supersecret
 ADMIN_EMAIL=admin@admin.com
 ADMIN_PASSWORD=123456
 
-PAYME_TEST_ENDPOINT=https://checkout.test.paycom.uz/api
-PAYME_ENDPOINT=https://checkout.paycom.uz/api
+# PAYME_ENDPOINT=https://checkout.paycom.uz/api
+PAYME_ENDPOINT=https://checkout.test.paycom.uz/api
 PAYME_ID=6516a0530d8fba371c206be4;
 PAYME_PASSWORD=5%3PdFRAvW1fqG2U39z3G6VsRFX9aWVuU8dw
