--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.1",
     "geolib": "^3.3.4",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
